# api/swagger.yaml
@@ -1,10 +1,7 @@
 openapi: 3.0.1
 info:
   title: Transportation Schedules
-  description: Api for managing schedules from transportation services. Supports the
-    General Transit Feed Specification (GTFS) format. You can find out more about
-    GTFS at [GTFS Official Website](http://swagger.io). For this sample, you can use
-    the api key `special-key` to test the authorization     filters.
+  description: 'Api for managing schedules from transportation services. Supports the General Transit Feed Specification (GTFS) format. You can find out more about GTFS at [GTFS Official Website](http://swagger.io). '
   termsOfService: http://swagger.io/terms/
   contact:
     email: fmts@ua.pt
@@ -13,16 +10,17 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
+  description: Find out more about this project!
+  url: http://code.ua.pt/projects/easytransports?jump=welcome
 servers:
-- url: http://localhost:3000
-  description: SwaggerHub API Auto Mocking
+# Added by API Auto Mocking Plugin
+- description: SwaggerHub API Auto Mocking
+  url: http://localhost:3000
 - url: https://transportation-schedules.herokuapp.com/
 - url: https://virtserver.swaggerhub.com/FabioTomaz/TransportationSchedules/1.0.0
 tags:
 - name: Routes
-  description: Routing Endpoints
+  description: Routing Endpoints 
 - name: Agencies
   description: Agencies Endpoints
 - name: Stops
@@ -33,19 +31,17 @@ tags:
     description: Find more about static GTFS
     url: https://developers.google.com/transit/gtfs
 paths:
-  /gtfs/{gtfsId}:
+  /gtfs/{agencyKey}:
     delete:
       tags:
       - GTFS
       summary: Deletes a gtfs
       operationId: deleteGtfs
       parameters:
-      - name: gtfsId
+      - name: agencyKey
         in: path
-        description: Gtfs id to delete
+        description: Agency Key representent of the gtfs to delete
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
           format: int64
@@ -56,9 +52,8 @@ paths:
           description: Invalid ID supplied
           content: {}
         404:
-          description: Pet not found
+          description: Agency/GTFS not found
           content: {}
-      x-swagger-router-controller: GTFS
   /gtfs:
     post:
       tags:
@@ -77,7 +72,6 @@ paths:
         default:
           description: successful operation
           content: {}
-      x-swagger-router-controller: GTFS
   /route/{routeId}:
     get:
       tags:
@@ -90,8 +84,6 @@ paths:
         in: path
         description: ID of the route to return
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
           format: int64
@@ -103,27 +95,23 @@ paths:
               schema:
                 $ref: '#/components/schemas/Route'
         400:
-          description: Invalid ID supplied
+          description: Must provide both latitude and longitude
           content: {}
         404:
-          description: Pet not found
+          description: Routes not found
           content: {}
-      x-swagger-router-controller: Routes
   /route/{fromStopId}/{toStopId}:
     get:
       tags:
       - Routes
       summary: Route trajectory between stops
-      description: Returns a trajectory between the stop ids specified. Also returns
-        data like fares, stops in the middle etc.
+      description: Returns a trajectory between the stop ids specified. Also returns data like fares, stops in the middle etc.
       operationId: routingBetweenStops
       parameters:
       - name: fromStopId
         in: path
         description: ID of the stop to departure from
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
           format: int64
@@ -131,29 +119,20 @@ paths:
         in: path
         description: ID of the stop to arrive to
         required: true
-        style: simple
-        explode: false
         schema:
           type: integer
           format: int64
       - name: departureDate
         in: query
-        description: The number of items to skip before starting to collect the result
-          set
-        required: false
-        style: form
-        explode: true
         schema:
           type: integer
           format: int64
+        description: The number of items to skip before starting to collect the result set
       - name: arrivalDate
         in: query
-        description: The numbers of items to return
-        required: false
-        style: form
-        explode: true
         schema:
           type: integer
+        description: The numbers of items to return
       responses:
         200:
           description: successful operation
@@ -163,123 +142,111 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RouteMapping'
-                x-content-type: application/json
         400:
           description: Invalid stopId
           content: {}
         404:
           description: No route available
           content: {}
-      x-swagger-router-controller: Routes
   /agency:
-    get:
-      tags:
-      - Agencies
-      summary: Get all transportation agencies
-      description: Returns all agencies stored frmo GTFS's uplouded
-      operationId: getAgencies
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Agency'
-                x-content-type: application/json
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Pet not found
-          content: {}
-      x-swagger-router-controller: Agencies
+      get:
+        tags:
+        - Agencies
+        summary: Get all transportation agencies
+        description: Returns all agencies stored frmo GTFS's uplouded
+        operationId: getAgencies
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Agency'
+          400:
+            description: Must provide both latitude and longitude
+            content: {}
+          404:
+            description: No agencies were found
+            content: {}    
   /agency/{agencyKey}:
-    get:
-      tags:
-      - Agencies
-      summary: Get a specific transportation agency
-      description: Returns a single agency from agencyKey
-      operationId: getAgencyById
-      parameters:
-      - name: agencyKey
-        in: path
-        description: ID of the route to return
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: string
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Agency'
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Pet not found
-          content: {}
-      x-swagger-router-controller: Agencies
+      get:
+        tags:
+        - Agencies
+        summary: Get a specific transportation agency
+        description: Returns a single agency from agencyKey
+        operationId: getAgencyById
+        parameters:
+        - name: agencyKey
+          in: path
+          description: ID of the route to return
+          required: true
+          schema:
+            type: string
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Agency'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Agency not found
+            content: {}    
   /stop:
-    get:
-      tags:
-      - Stops
-      summary: Get all stops
-      description: Returns all stops stored from GTFS's uplouded
-      operationId: getStops
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Stop'
-                x-content-type: application/json
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Pet not found
-          content: {}
-      x-swagger-router-controller: Stops
+      get:
+        tags:
+        - Stops
+        summary: Get all stops
+        description: Returns all stops stored from GTFS's uplouded
+        operationId: getStops
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Stop'
+          400:
+            description: Must provide both latitude and longitude
+            content: {}
+          404:
+            description: Stops not found
+            content: {}    
   /stop/{stopId}:
-    get:
-      tags:
-      - Stops
-      summary: Get a specific stop
-      description: Returns a single stop
-      operationId: getStopById
-      parameters:
-      - name: stopId
-        in: path
-        description: ID of the stop to return
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: integer
-          format: int64
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Stop'
-        400:
-          description: Invalid ID supplied
-          content: {}
-        404:
-          description: Stop not found
-          content: {}
-      x-swagger-router-controller: Stops
+      get:
+        tags:
+        - Stops
+        summary: Get a specific stop
+        description: Returns a single stop 
+        operationId: getStopById
+        parameters:
+        - name: stopId
+          in: path
+          description: ID of the stop to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Stop'
+          400:
+            description: Invalid ID supplied
+            content: {}
+          404:
+            description: Stop not found
+            content: {}    
 components:
   schemas:
     Agency:
@@ -300,18 +267,10 @@ components:
           type: string
         agency_phone:
           type: string
-      example:
-        agency_timezone: agency_timezone
-        agency_key: agency_key
-        agency_name: agency_name
-        agency_url: agency_url
-        agency_phone: agency_phone
-        agency_id: 0
-        agency_lang: agency_lang
     Route:
       type: object
       properties:
-        agency_key:
+        agency_key: 
           type: string
         route_id:
           type: string
@@ -321,12 +280,6 @@ components:
           type: string
         route_url:
           type: string
-      example:
-        agency_key: agency_key
-        route_id: route_id
-        route_name: true
-        route_type: route_type
-        route_url: route_url
     RouteMapping:
       type: object
       properties:
@@ -340,26 +293,17 @@ components:
         arrivalStop:
           type: integer
           format: int64
-        departureTime:
+        departureTime: 
           type: string
         arrivalTime:
           type: string
-        fareTotal:
+        fareTotal: 
           type: number
           format: double
-      example:
-        departureTime: departureTime
-        routes:
-        - {}
-        - {}
-        arrivalStop: 6
-        departureStop: 0
-        arrivalTime: arrivalTime
-        fareTotal: 1.46581298050294517310021547018550336360931396484375
     Stop:
       type: object
       properties:
-        agency_key:
+        agency_key: 
           type: string
         stop_id:
           type: string
@@ -369,9 +313,3 @@ components:
           type: string
         stop_lon:
           type: string
-      example:
-        agency_key: agency_key
-        stop_lon: stop_lon
-        stop_id: stop_id
-        stop_lat: stop_lat
-        stop_name: true
